--- a/contrib/translations/ja/ja_JP.lng
+++ b/contrib/translations/ja/ja_JP.lng
@@ -4408,3 +4408,30 @@ C ドライブはすでにマウントされていますが、続けますか?
 :IMAGEMOUNT_CHANGE_DOSVER
 この形式のイメージをマウントするためには DOS バージョンが %s 以上である必要があります。DOS バージョンを %s へ変更してイメージをマウントしますか ?
 .
+:MENU_DRIVE_NOTEXIST
+ドライブが存在しないか、イメージがマウントされています。
+.
+:MENU_SAVE_IMAGE_FAILED
+ディスク・イメージが保存できませんでした。.
+.
+:MENU_JP_CPONLY
+この機能は日本語のコードページ (932) のみに使われます。
+.
+:MENU_CN_CPONLY
+この機能は中国語のコードページ (936 または 950) のみに使われます。
+.
+:MENU_GLIDE_ERROR
+Glide パススルーを設定できませんでした。Glide ラッパーが正しくインストールされているか確認して下さい。
+.
+:MENU_HIGH_INTENSITY_ERROR
+現在のビデオ・モードでは強調表示はサポートされていません。.
+.
+:MENU_SAVE_FILE_ERROR
+指定のファイルに保存できませんでした: %s
+.
+:MENU_INT2F_SUCCESS
+INT 2Fh フックを設定しました。
+.
+:MENU_INT2F_ALREADY_SET
+INT 2Fh フックは設定済みです。
+.
