--- a/contrib/translations/ja/ja_JP.lng
+++ b/contrib/translations/ja/ja_JP.lng
@@ -4463,3 +4463,18 @@ DOSBox-X を終了してよろしいですか?
 プログラムまたはゲームを実行中です。
 終了してもよろしいですか?
 .
+:LANG_JP_INCOMPATIBLE
+指定した言語ファイルは日本の PC-98、JEGA/AX システムに対応しておりません。
+
+この言語ファイルを使用しますか?
+.
+:LANG_DOSV_INCOMPATIBLE
+指定した言語ファイルは現在の DOS/V システムに対応しておりません。
+
+この言語ファイルを使用しますか?
+.
+:LANG_CHANGE_CP
+指定した言語ファイルはコードページ %d を使用します。
+
+このコードページへ変更しますか?
+.
