--- a/contrib/translations/ja/ja_JP.lng
+++ b/contrib/translations/ja/ja_JP.lng
@@ -4478,3 +4478,47 @@ DOSBox-X を終了してよろしいですか?
 
 このコードページへ変更しますか?
 .
+:SCALER_LOAD_WARN
+このスケーラは正しく動作しないか意図しない動作をするかもしれません:
+
+%s
+
+このスケーラを強制的に適用しますか?
+.
+:PIXEL_SHADER_WARN
+このピクセルシェーダは正しく動作しないか意図しない動作をするかもしれません:
+
+%s
+
+このピクセルシェーダを強制的に適用しますか?
+
+(ピクセルシェーダのオプションに 'forced' を追加すると、このメッセージを表示せずに強制的に適用します)
+.
+:PIXEL_SHADER_LOADED
+適用したピクセルシェーダ - %s
+.
+:MAPPEREDITOR_NOT_AVAILABLE
+マッパー・エディタは現在使用できません。
+.
+:OPL_REC_COMPLETED
+Raw OPL 出力をファイルに保存しました:
+
+%s
+.
+:OPL_CAPTURE_FAILED
+現在のアプリケーションが Raw OPL フォーマットに対応していない ESFM ネイティブモードを使用しているため、Raw OPL 出力をキャプチャできません。
+.
+:TTF_DBCS_ONLY
+この機能は中国語 / 日本語 / 韓国語 のコードページで使います。
+.
+:SAVE_FAILED
+現在のステートを保存できませんでした。
+.
+:SAVE_CORRUPTED
+セーブ・ステートは壊れています! プログラムは動作しないかもしれません。
+.
+:SAVE_SCREENSHOT
+スクリーンショットを以下のファイルに保存しました:
+
+%s
+.
